<resources>
    <string name="app_name">玩Android</string>
    <string name="dialog_tips">提示</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>

    <!--登录-->
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_register">注册</string>
    <string name="login">登录</string>

    <!--注册-->
    <string name="register_name">请输入用户名</string>
    <string name="register_password">请输入密码</string>
    <string name="register_repassword">请再次输入密码</string>
    <string name="password_different">两次输入的密码不一致，请重新输入!</string>
    <string name="dialog_register_success">注册成功</string>

    <!--首页-->
    <string name="main_alert_back">再按一次退出程序</string>
    <string name="title_search">搜索</string>
    <string name="title_home">首页</string>
    <string name="title_knowledgesystem">知识体系</string>
    <string name="title_wechat">公众号</string>
    <string name="title_navigation">导航</string>
    <string name="title_project">项目</string>
    <string name="item_history">历史记录</string>
    <string name="item_collection">我的收藏</string>
    <string name="item_bookmark">我的书签</string>
    <string name="item_github">项目主页</string>
    <string name="item_share_project">分享项目</string>
    <string name="item_setting">切换主题</string>
    <string name="item_about">关于</string>
    <string name="item_logout">退出登录</string>
    <string name="click_tologin">点击头像登录</string>
    <string name="common_website">常用网站</string>
    <string name="search_hot">搜索热词</string>
    <string name="search_history">搜索历史</string>
    <string name="search_history_clear">清空</string>
    <string name="action_search">搜索</string>
    <string name="delete_all_search_history">是否删除所有搜索历史记录?</string>
    <string name="confirm_logout">确定退出当前账号?</string>

    <!--收藏-->
    <string name="collection_success">收藏成功</string>
    <string name="collection_failed">收藏失败</string>
    <string name="collection_cancel_success">取消收藏成功</string>
    <string name="collection_cancel_failed">取消收藏失败</string>
    <string name="collection_no_login">请先登录</string>
    <string name="menu_add">添加</string>
    <string name="menu_edit">编辑</string>
    <string name="hint_name">请输入网站名称</string>
    <string name="hint_title">请输入标题</string>
    <string name="hint_author">请输入作者</string>
    <string name="hint_link">请输入链接地址</string>
    <string name="add_bookmark_success">添加书签成功</string>
    <string name="add_bookmark_failed">添加书签失败</string>
    <string name="bookmark_delete_success">删除书签成功</string>
    <string name="bookmark_delete_failed">删除书签失败</string>
    <string name="confirm_bookmark_delete">确定删除该条书签?</string>
    <string name="edit_bookmark_success">编辑书签成功</string>
    <string name="edit_bookmark_failed">编辑书签失败</string>
    <string name="dialog_add_collection_title">新增收藏</string>
    <string name="dialog_add_bookmark_title">新增书签</string>
    <string name="dialog_edit_bookmark_title">编辑书签</string>

    <!--文章详情-->
    <string name="title_share">分享</string>
    <string name="title_collect">收藏</string>
    <string name="title_copy">复制链接</string>
    <string name="title_browser">用系统浏览器打开</string>
    <string name="share_article_url">%1$s分享【%2$s】：%3$s</string>
    <string name="copy_link_success">已复制链接</string>

    <!-- 公众号 -->
    <string name="hint_search">请输入搜索内容</string>

    <!-- 网络请求错误 -->
    <string name="no_network_connection">网络连接不可用,请检查网络设置</string>
    <string name="request_error">网络连接超时,请稍后再试</string>
    <string name="network_error">网络连接异常</string>
    <string name="json_parse_error">数据解析异常</string>
    <string name="param_error">参数错误</string>
    <string name="unknown_error">未知错误</string>

    <string name="state_empty">暂时没有数据~~</string>
    <string name="state_error">加载失败~~</string>
    <string name="state_no_network">网络异常~~</string>
    <string name="state_error_retry">点击重试</string>
</resources>
