<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_share"
        android:orderInCategory="100"
        android:title="@string/title_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_collect"
        android:orderInCategory="100"
        android:title="@string/title_collect"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_copy"
        android:orderInCategory="100"
        android:title="@string/title_copy"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_browser"
        android:orderInCategory="100"
        android:title="@string/title_browser"
        app:showAsAction="never" />
</menu>