<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:zhy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:id="@+id/ll_hot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:padding="@dimen/dp_8">

        <TextView
            style="@style/textview_default"
            android:text="@string/search_hot"
            android:textColor="@color/font_hint"
            android:textSize="@dimen/sp_14" />

        <com.zhy.view.flowlayout.TagFlowLayout
            android:id="@+id/tfl_hot_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            zhy:max_select="0" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_3">

            <TextView
                style="@style/textview_default"
                android:text="@string/search_history"
                android:textColor="@color/font_hint"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tv_clear"
                style="@style/textview_default"
                android:layout_alignParentRight="true"
                android:text="@string/search_history_clear"
                android:textColor="@color/font_hint"
                android:textSize="@dimen/sp_14" />

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:overScrollMode="never"></android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_article"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:visibility="gone">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/refresh_article"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_10" />

        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

</RelativeLayout>