<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:rv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        layout="@layout/layout_toolbar"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dp_8">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_10"
                android:src="@mipmap/icon_username" />

            <com.zk.wanandroid.widgets.ClearEditText
                android:id="@+id/et_login_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/login_username"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@mipmap/icon_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_10"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/dp_8">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp_10"
                android:src="@mipmap/icon_password" />

            <com.zk.wanandroid.widgets.ClearEditText
                android:id="@+id/et_login_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:background="@mipmap/icon_line" />

        <com.flyco.roundview.RoundTextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_40"
            android:gravity="center"
            android:padding="@dimen/dp_12"
            android:text="@string/login"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp_16"
            rv:rv_backgroundColor="@color/color_main"
            rv:rv_cornerRadius="@dimen/dp_10"
            rv:rv_isRippleEnable="true"
            rv:rv_strokeColor="@color/color_divider"
            rv:rv_strokeWidth="1dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15">

            <TextView
                android:id="@+id/tv_register"
                style="@style/textview_default"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_30"
                android:gravity="center"
                android:text="@string/login_register"
                android:textColor="@color/color_main"
                android:textSize="@dimen/sp_16" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>